# ZinPass

./: .gitignore  CMakeLists.txt  README.md
client-desktop/: CMakeLists.txt
client-desktop/include/models/: account.h  view_account.h
client-desktop/include/rpc/: account_rpc.h  auth_rpc.h  phone_rpc.h  user_rpc.h
client-desktop/include/state/: state_manager.h
client-desktop/res/: resource.qrc
client-desktop/src/: main.cpp
client-desktop/src/business/: pwd_generator.cpp
client-desktop/src/models/: account.cpp  session.cpp  user.cpp  view_account.cpp
client-desktop/src/rpc/: account_rpc.cpp  auth_rpc.cpp  category_rpc.cpp  phone_rpc.cpp  telecom_rpc.cpp  user_rpc.cpp
client-desktop/src/state/: state_manager.cpp
client-desktop/src/ui/: dialog_auth.cpp  dialog_auth.h  function_menu_form.cpp  function_menu_form.h  function_menu_form.ui  input_form.cpp  input_form.h  is_input_valid.cpp  main_workbench.cpp  main_workbench.h  output_form.cpp  output_form.h  search_box.cpp  search_box.h
client-desktop/src/ui/account/: account_filter_form.cpp  account_filter_form.h  account_mgr_form.cpp  account_mgr_form.h  data_owner_form.h  dialog_add_account.cpp  dialog_add_account.h  dialog_delete_account.cpp  dialog_delete_account.h  dialog_edit_account.cpp  dialog_edit_account.h  dialog_exposed_pwd.cpp  dialog_exposed_pwd.h  popup_filter_window.cpp  popup_filter_window.h
client-desktop/src/ui/phone/: dialog_add_phone.cpp  (+7 more)
client_desktop/: CMakeLists.txt
client_desktop/include/business/: pwd_generator.h
client_desktop/res/: resource.qrc
client_desktop/src/: main.cpp
client_desktop/src/business/: pwd_generator.cpp
client_desktop/src/rpc/: phone_rpc.cpp
client_desktop/src/state/: state_manager.cpp
client_desktop/src/ui/: dialog_auth.cpp  dialog_auth.h  function_menu_form.cpp  function_menu_form.h  input_form.cpp  log_handle_form.cpp  log_run_form.cpp  main_workbench.cpp  main_workbench.h  main_workbench.ui  output_form.cpp  search_box.h
control/: CMakeLists.txt
control/include/cli/: command_handler.h  prompt.h  read_eval_print_loop.h
control/src/: main.cpp
control/src/cli/: cli_command.cpp  command_handler.cpp  prompt.cpp  read_eval_print_loop.cpp
data/: zinpass-schema.sql
docs/: 下一步开发计划.txt  开发计划.txt  构建和使用说明.txt
protos/account/v1/: account.proto  category.proto  phone.proto  telecom.proto
protos/user/v1/: auth.proto  user-example.proto  user.proto
res/: icon_zinpass.rc
scripts/: compile-pwdgen.bat  compile-pwdgen.sh  protoc.py
service/: CMakeLists.txt
service/inc/business/: account_manager.h  authentication.h  user_manager.h
service/inc/config/: read_configuration_file.h  state_manager.h
service/inc/mgr/: phone_mgr.h
service/inc/mod_session/: session_dao.h  session_mgr.h
service/inc/models/: account.h
service/inc/repo/: account_dao.h  category_dao.h  phone_dao.h  user_dao.h
service/inc/repository/: account_dao.h  connection_pool.h  init_database.h  mobile_phone_dao.h  system_user_dao.h
service/inc/service/: hello_service.h
service/internal/business/: account_manager.h  authentication.h  mobile_phone_manager.h  session_manager.h  user_manager.h
service/internal/models/: view_account.h
service/internal/repository/: account_dao.h  category_dao.h  mobile_phone_dao.h  session_dao.h  system_user_dao.h  telecom_operator_dao.h
service/src/: main.cpp
service/src/business/: account_manager.cpp  authentication.cpp  mobile_phone_manager.cpp  session_manager.cpp  telecom_operator_manager.cpp  user_manager.cpp
service/src/config/: about.cpp  read_config_file.cpp  read_configuration_file.cpp  state_manager.cpp
service/src/mgr/: account_mgr.cpp  phone_mgr.cpp
service/src/mod_session/: session_dao.cpp  session_persistence.cpp
service/src/models/: account.cpp  mobile_phone.cpp  session.cpp  system_user.cpp  view_account.cpp
service/src/repo/: account_dao.cpp  connection_pool.cpp  init_database.cpp  phone_dao.cpp
service/src/repository/: account_dao.cpp  category_dao.cpp  connection_pool.cpp  init_database.cpp  mobile_phone_dao.cpp  session_dao.cpp  system_user_dao.cpp  telecom_operator_dao.cpp
service/src/service/: grpc_client_service.cpp  grpc_control_service.cpp  hello_service.cpp
service/src/utils/: date_time.cpp  log_manager.cpp  pwd_generator.cpp  pwd_utils.cpp  uuid_generator.cpp
src/: main.cpp
src/PwdGen-cli/: pwdgen.c
src/dao/: AccountDAO.cpp  AccountDAO.h  CategoryDAO.cpp  CategoryDAO.h  InitDatabase.cpp  InitDatabase.h  MobilePhoneDAO.cpp  MobilePhoneDAO.h  SystemUserDAO.cpp  SystemUserDAO.h  TelecomOperatorDAO.cpp  TelecomOperatorDAO.h
src/model/: Account.cpp  Account.h  MobilePhone.cpp  MobilePhone.h  SystemUser.cpp  SystemUser.h
src/service/: AccountService.cpp  AccountService.h  Environ.cpp  Environ.h  MobilePhoneService.cpp  MobilePhoneService.h  PwdGenerator.cpp  PwdUtils.cpp  SystemUserService.cpp  SystemUserService.h  TelecomOperatorService.cpp  TelecomOperatorService.h  datetime.cpp  datetime.h
src/ui/: AuthDlg.cpp  AuthDlg.h  FunctionMenuForm.cpp  FunctionMenuForm.h  FunctionMenuForm.ui  InputForm.cpp  InputForm.h  InputForm.ui  IsInputValid.cpp  IsInputValid.h  MainWorkbench.cpp  MainWorkbench.h  MainWorkbench.ui  OutputForm.cpp  OutputForm.h  OutputForm.ui  WidgetPublicMethod.cpp  WidgetPublicMethod.h
src/ui/account/: AccountAddDlg.cpp  AccountAddDlg.h  AccountDlg.ui  AccountEditDlg.cpp  AccountEditDlg.h  AccountMgrForm.cpp  AccountMgrForm.h  AccountMgrForm.ui  DataOwnerForm.cpp  DataOwnerForm.h  DataOwnerForm.ui  ExposedPwdDlg.cpp  ExposedPwdDlg.h  ExposedPwdDlg.ui  PopupFilterWindow.cpp
src/ui/phone/: PhoneAddDlg.cpp  PhoneAddDlg.h  PhoneAddDlg.ui  PhoneMgrForm.cpp  PhoneMgrForm.h  PhoneMgrForm.ui
src/ui/pwd/: CheckPwdSecurityForm.cpp  CheckPwdSecurityForm.h  CheckPwdSecurityForm.ui  PwdGenDlg.cpp  PwdGenDlg.h  PwdGeneratorDlg.cpp  PwdGeneratorDlg.h
src/ui/user/: CancelPersonalUserForm.cpp  CancelPersonalUserForm.h  CancelPersonalUserForm.ui  LoginDlg.cpp  LoginDlg.h  PersonalMgrForm.cpp  PersonalMgrForm.h  PersonalMgrForm.ui  SignupDlg.cpp  SignupDlg.h  SignupDlg.ui
(+97 files in other folders)
